词法分析器识别部分自动机代码